# uvmgr

./: .bandit  .copier-answers.yml  .cursorrules  .env.example  .gitignore  .weaver-forge.json  8020_external_validation_results.json  8020_otel_validation_8020_otel_validation.json  8020_otel_validation_8020_validation.json  ARCHITECTURE_DECISIONS.md  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_ANALYSIS.md  COMPLETE_AUTOMATION_SUMMARY.md  COMPREHENSIVE_DOD_AUTOMATION.md  Chapter4_AGI_Enhancement_Complete.md  Chapter4_Implementation_Synthesis.md  Chapter4_Weaver_Forge_Complete.md  DOD_AUTOMATION_ARCHITECTURE.md  DOD_AUTOMATION_DEMO.md  DoD_Implementation_Status.md  DoD_Runtime_Test_Report.md  DoD_Validation_Report.md  Dockerfile  Dockerfile.test  E2E_AUTOMATION_BLUEPRINT.md  EMA-BACKTEST-RESULTS.md  ENTERPRISE_VALIDATION_STRATEGY.md  FINAL_COMPLETION_REPORT.md  FINAL_DOD_VALIDATION_REPORT.md  FINAL_E2E_VALIDATION_REPORT.md  FINAL_VALIDATION_COMPLETE.md  FINAL_VALIDATION_REPORT.md  GAP_ANALYSIS.md  HOWTO.md  NEW-PROJECT-PRD.md  NEW-PROJECT.md  OTEL_IMPLEMENTATION_SUMMARY.md  OTEL_VALIDATION_EVIDENCE.md  OTEL_VALIDATION_SUMMARY.md  (+115 more)
.claude/: README.md
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.otel.yml  docker-compose.validation.yml  e2e-otel-validation.py  external-project-validation.py  otel-collector-config.yaml  prometheus.yml  setup.sh  start-otel.sh  validate-current-state.py  validate-exponential.py
.dod/: enterprise.yaml
.lh/: HOWTO.md.json  NEW-PROJECT.md.json  requirements.txt.json
.uvmgr/: state.json  workspace.yaml
book/: book.toml
container-demo/: .gitignore  README.md  pyproject.toml
container-demo/.devcontainer/: devcontainer.json
container-demo/src/container_demo/: __init__.py  api.py  cli.py
container-demo/tests/: test_basic.py
demo/: README.md  otel-demo.sh  pyinstaller_e2e.py  quick_test.py  requirements.txt  run_demo.py  setup.sh  substrate-otel-demo.py
demo/demo-otel-app/: .copier-answers.yml  Dockerfile  README.md  pyproject.toml
demo/demo-otel-app/.devcontainer/: devcontainer.json
demo/demo-otel-app/.github/workflows/: otel-validation.yml
demo/demo-otel-app/examples/: cli_with_otel.py
demo/demo-otel-app/src/demo-otel-app/: __init__.py
demo/demo-otel-app/src/demo_otel_app/: __init__.py  _telemetry.py
demo/demo-otel-app/tests/: __init__.py  test_import.py
docs/: 8020_WORKFLOWS_GUIDE.md  CICD_INTEGRATION_GUIDE.md  DOD_API_REFERENCE.md  DOD_USER_GUIDE.md  OPENTELEMETRY_WEAVER_VALIDATION.md  OTEL_EXTERNAL_VALIDATION_SUMMARY.md  Project-Charter.md  QUANT-SAAS-ROADMAP.md  Quant-Trading-Course.md  README.md  Return-Safeguard-Bypass-Patterns.md  Return-Safeguards.md  SUBSTRATE-INTEGRATION.md  TELEMETRY_VALIDATION.md  TROUBLESHOOTING_GUIDE.md  UVMGR_COOKBOOK.md  VALIDATION_PROCESS_SUMMARY.md  VALIDATION_QUICK_REFERENCE.md  WEAVERSHIP_MASTER_ROADMAP.md  WEAVER_FORGE_ARCHITECTURE.md  code-quality.md  metrics.json  otel-guide.md  otel-integration.md  roadmap-validation-integration.md  search-guide.md  substrate-customization-plan.md  validation-system.md  weaver-command-suite.md
examples/: batch-generation-examples.md  batch-spec.json  template-specs.yaml  terraform_weaver_forge_e2e.py
external-project-testing/: Dockerfile.external  OTEL-FAILURE-DETECTION.md  README.md  auto-install-uvmgr.sh  docker-compose.external.yml  grafana-dashboard-config.json  otel-claim-verification.py  otel-collector-config.yaml  otel-dashboard-setup.py  otel-failure-detector.py  test_results.md  (+10 more)
external-project-testing/workspace/cli-tool/: pyproject.toml
external-project-testing/workspace/cli-tool/src/cli_external_test/: main.py
external-project-testing/workspace/cli-tool/tests/: test_cli.py  test_uvmgr_integration.py
external-project-testing/workspace/data-science/: pyproject.toml
external-project-testing/workspace/data-science/src/datascience_external_test/: analysis.py
external-project-testing/workspace/data-science/tests/: test_analysis.py
external-project-testing/workspace/fastapi-app/: pyproject.toml
external-project-testing/workspace/fastapi-app/src/fastapi_external_test/: main.py
external-project-testing/workspace/fastapi-app/tests/: test_api.py
external-project-testing/workspace/minimal-python/: README.md  pyproject.toml
external-project-testing/workspace/minimal-python/src/minimal_external_test/: main.py
external-project-testing/workspace/minimal-python/tests/: test_main.py  test_uvmgr_integration.py
external-project-testing/workspace/substrate-template/: pyproject.toml
external-project-testing/workspace/substrate-template/src/substrate_external_test/: main.py
external-project-testing/workspace/substrate-template/tests/: test_main.py
external-real-test/: pyproject.toml
external-real-test/src/real_external_test/: __init__.py  cli.py
external-real-test/tests/: test_core.py
test-external-project/: pyproject.toml  test_main.py
test-external-project/.github/workflows/: dod-automation.yml
test-external-project/src/test_external_project/: __init__.py  main.py
test-external-project/test_external_project/: __init__.py  main.py
test-external-project/tests/: test_basic.py  test_main.py
test-substrate-project/: .pre-commit-config.yaml  README.md  Taskfile.yml  pyproject.toml
test-substrate-project/.devcontainer/: devcontainer.json
test-substrate-project/.github/workflows/: ci.yml
test-substrate-project/src/test_substrate_project/: __init__.py  api.py  cli.py
test-substrate-project/tests/: test_basic.py
test_external_project/: main.py  pyproject.toml
tests/e2e/fixtures/sample_project/: README.md  pyproject.toml
tests/e2e/fixtures/sample_project/src/sample_project/: __init__.py  cli.py  core.py
tests/e2e/fixtures/sample_project/tests/: __init__.py  test_cli.py  test_core.py
weavership-v2/: .copier-answers.yml  README.md  pyproject.toml
weavership-v2/.devcontainer/: devcontainer.json
weavership-v2/src/weavership-agi/: __init__.py
weavership-v2/src/weavership_agi/: __init__.py  _telemetry.py  cli.py
weavership-v2/tests/: __init__.py  test_agi_components.py  test_import.py
(+532 files in other folders)
