[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "test-external-project"
version = "0.1.0"
description = "Test external project for uvmgr validation"
authors = [{name = "Test User", email = "test@example.com"}]
dependencies = [
    "black>=25.1.0",
    "pytest>=8.4.1",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]
