[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "test-substrate-project"
version = "0.1.0"
description = "A Python project created with uvmgr"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Developer", email = "dev@example.com"},
]
dependencies = [
    'fastapi',
    'uvicorn[standard]',
    'typer[all]',
    "pytest-cov>=6.2.1",
    "build>=1.2.2.post1",
]

[project.optional-dependencies]
dev = ['pytest', 'pytest-cov', 'ruff', 'mypy', 'poethepoet', 'commitizen', 'pre-commit']

[project.urls]
Homepage = "https://github.com/example/test-substrate-project"
Repository = "https://github.com/example/test-substrate-project.git"
Issues = "https://github.com/example/test-substrate-project/issues"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "DJ", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "TD", "FIX", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"]
ignore = ["E501", "S101", "D"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-report=html"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_files = ["pyproject.toml:version"]

[tool.poe.tasks]
test = "pytest"
lint = "ruff check ."
format = "ruff format ."
type-check = "mypy src"
all-checks = ["lint", "format", "type-check", "test"]

[tool.poe.tasks.serve]
help = "Run the development server"
cmd = "uvicorn test_substrate_project.api:app --reload"
