[tool.poetry]
name = 'test-external-project'
version = '0.1.0'
description = 'Test external project for uvmgr validation'
authors = ['Test Author <test@example.com>']

[tool.poetry.dependencies]
python = '^3.8'

[build-system]
requires = ['poetry-core>=1.0.0']
build-backend = 'poetry.core.masonry.api'

