
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datascience-external-test"
version = "0.1.0"
description = "Data science project for uvmgr testing"
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "matplotlib>=3.4.0",
    "uvmgr",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "jupyter",
]

[tool.uv.sources]
uvmgr = { path = "../../../", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
]
