
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "substrate-external-test"
version = "0.1.0"
description = "Substrate-style project for uvmgr testing"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "uvmgr",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.scripts]
substrate-test = "substrate_external_test.main:app"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.uv.sources]
uvmgr = { path = "../../../", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
]
